// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "color",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="color"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-88"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "date",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="date"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-89"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "datetime",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="datetime-local"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-90"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  />
  <div
    className="MuiBox-root MuiBox-root-86"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "number",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="number"
            value={0}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-85"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "number",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-84"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div>
      <p>
        <input
          autoFocus={false}
          defaultValue=""
          disabled={false}
          id="root"
          onChange={[Function]}
          type="file"
        />
      </p>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-83"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "email",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="email"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-71"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "format": "uri",
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="url"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-82"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="MuiFormControl-root MuiFormControl-fullWidth"
    >
      <div
        className="MuiFormControl-root MuiTextField-root"
        registry={
          Object {
            "ArrayFieldTemplate": [Function],
            "FieldTemplate": [Function],
            "ObjectFieldTemplate": [Function],
            "definitions": Object {},
            "fields": Object {
              "AnyOfField": [Function],
              "ArrayField": [Function],
              "BooleanField": [Function],
              "DescriptionField": [Function],
              "NullField": [Function],
              "NumberField": [Function],
              "ObjectField": [Function],
              "OneOfField": [Function],
              "SchemaField": [Function],
              "StringField": [Function],
              "TitleField": [Function],
              "UnsupportedField": [Function],
            },
            "formContext": Object {},
            "rootSchema": Object {
              "type": "string",
            },
            "widgets": Object {
              "AltDateTimeWidget": [Function],
              "AltDateWidget": [Function],
              "BaseInput": [Function],
              "CheckboxWidget": [Function],
              "CheckboxesWidget": [Function],
              "ColorWidget": [Function],
              "DateTimeWidget": [Function],
              "DateWidget": [Function],
              "EmailWidget": [Function],
              "FileWidget": [Function],
              "HiddenWidget": [Function],
              "PasswordWidget": [Function],
              "RadioWidget": [Function],
              "RangeWidget": [Function],
              "SelectWidget": [Function],
              "TextWidget": [Function],
              "TextareaWidget": [Function],
              "URLWidget": [Function],
              "UpDownWidget": [Function],
            },
          }
        }
      >
        <div
          className="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
          onClick={[Function]}
        >
          <input
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiInput-input"
            disabled={false}
            id="root"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder=""
            required={false}
            type="string"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-39"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
    </button>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      className="unsupported-field"
    >
      <p>
        Unsupported field schema
        <span>
           for
           field 
          <code>
            root
          </code>
        </span>
        <em>
          : 
          Unknown field type undefined
        </em>
        .
      </p>
      <pre>
        {}
      </pre>
    </div>
  </div>
  <div
    className="MuiBox-root MuiBox-root-87"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="submit"
    >
      <span
        className="MuiButton-label"
      >
        Submit
      </span>
    </button>
  </div>
</form>
`;
